[package]
name = "mesh-ai-node"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
libp2p = { version = "0.56.0", features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
] }
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }


[[example]]
name = "ping"
path = "src/examples/ping.rs"
